# doc-experiment-sphinx

./: .gitattributes  .readthedocs.yaml  Makefile  README.md  _config.yml  doc-experiment.opam  dune-project  index.html
.github/workflows/: ci.yml  deploy-doc.yml  deploy-odoc.yml
doc/: conf.py  hello_mdx.md  requirements.txt
doc-experiment/Doc_experiment/: index.html
lib/doc_experiment/src/: doc_experiment.mli  dune
lib/doc_experiment/test/: dune  test__doc_experiment.ml
odoc/: index.html
odoc/doc-experiment/: index.html
odoc/doc-experiment/Doc_experiment/: index.html
sphinx/: .buildinfo  genindex.html  hello_mdx.html  index.html  objects.inv  search.html  searchindex.js
sphinx/.doctrees/: environment.pickle  hello_mdx.doctree  index.doctree
sphinx/_sources/: hello_mdx.md.txt  index.rst.txt
