opam-version: "2.0"
synopsis: "Experimenting with documentation tools"
description: "Experimenting with documentation tools"
maintainer: "Mathieu Barbin"
authors: "Mathieu Barbin"
license: "MIT"
homepage: "https://github.com/mbarbin/doc-experiment"
doc: "https://github.com/mbarbin/doc-experiment"
bug-reports: "https://github.com/mbarbin/doc-experiment/issues"
depends: [
  "ocaml" {>= "4.13"}
  "dune" {>= "3.5"}
  "core" {>= "v0.15"}
  "core_unix" {>= "v0.15"}
  "mdx" {>= "2.2"}
  "ppx_jane" {>= "v0.15"}
]
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
dev-repo: "git+https://github.com/mbarbin/doc-experiment.git"
